"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/metaserver.c: small Win32 fixes, explicitely cast meta_sort
   in qsort
Ryo 2004-01-27

common/item.c: check supplied argument to remove_item_inventory is
   not NULL.
Ryo 2004-01-25

gtk/map.c, gnome/map.c: Apply patch by kirschbaum@myrealbox.com which fixes
improper coordinate comparision.
gtk/gx11.c: Remove some unused declarations.
gtk/map.c: always set the cleared flag as spaces come into view.
MSW 2003-11-28

gtk/gx11.c: fixed invalid level display for skills under Win32
    (int64 issue, %lld doesn't work under Win32)
	Also removed dumb Win-newlines from previous commits.
Ryo 2003-11-22

common/client.h: readded (Win32 only) player's name. Used for specific
   key bindings file loading/saving.
common/script.c: made dummy functions to correctly compile under Win32.
   Actual implementation will come someday :)
Ryo 2003-11-10

x11/x11.c: Fix button pressing in the game window so it properly deals with
   non standard size maps.
MSW 2003-10-26

Those fixes are for Windows compilation ('for Windows' is implicit everywhere).
Most code was borrowed from Philip aka Somebdy's previous GTK port.
Note: the changed code is embedded in #if(n)def WIN32 / #endif.
---
Win32-Readme.txt: added to tell about supported clients under Windows.
common/client-types.h: Windows-specific typedefs.
common/client.c: missing include fixed, changed fcntl for ioctlsocket.
common/image.c: forced opening of files in binary mode to avoid bad troubles.
common/init.c: make sure HOME is set, to correctly find paths.
common/metaserver.c: made it work, with a specific function (fgets can't work).
common/newsocket.c: fix GetInt64_String. Make write_socket and SockList_ReadPacket work.
gtk/config.c: use correct header file
gtk/gx11.c: fix bad header files. Fix g_free() / free() issue. Catch player's name
    to load specific keys. Fix score display issue. Other specific stuff.